fix(frontend): remove extra spacing between header and subtitle on auth pages tm-131

--- a/apps/frontend/src/pages/auth/components/sign-in-form/styles.module.css
+++ b/apps/frontend/src/pages/auth/components/sign-in-form/styles.module.css
@@ -10,13 +10,14 @@
 }
 
 .title {
-	margin: 0 0 5px;
+	margin: 0;
 	font-size: var(--font-size-600);
 	font-weight: 600;
 	line-height: 48px;
 }
 
 .subtitle {
+	margin-top: 0;
 	font-size: var(--font-size-200);
 	font-weight: 400;
 	line-height: 20px;
